@@ -301,10 +301,10 @@ function pts_version_codenames()
 		);
 }
 
-pts_define('PTS_VERSION', '10.2.2');
-pts_define('PTS_CORE_VERSION', 10220);
-pts_define('PTS_RELEASE_DATE', '20210217');
-pts_define('PTS_CODENAME', 'Harstad');
+pts_define('PTS_VERSION', '10.4.0m1');
+pts_define('PTS_CORE_VERSION', 10310);
+pts_define('PTS_RELEASE_DATE', '20210317');
+pts_define('PTS_CODENAME', 'Ibestad');
 
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
 pts_define('PTS_IS_WEB_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'WEB_CLIENT'));
